# casc-cli

./: .gitignore  .gitmodules  Cargo.toml  GEMINI.md  README.md  build.rs  dist-workspace.toml
.github/workflows/: release.yml
src/: casc.rs  commands.rs  exit_codes.rs  main.rs  targets.rs
src/casc/: casclib.rs
src/casc/casclib/: bindings.rs
src/commands/: extract.rs  list.rs
