[package]
name = "casc-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "casc"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.5.2"
globset = "0.4"

[dev-dependencies]
mockall = "0.13"

[build-dependencies]
cmake = "0.1"
bindgen = "0.71"
