[package]
name = "casc"
version = "0.1.0"
edition = "2024"
description = "A cross-platform CLI tool for Blizzard CASC archives."
license = "MIT"
repository = "https://github.com/ironsp4rk/casc-cli"
keywords = ["casc", "blizzard", "archive", "diablo", "diablo2"]
categories = ["command-line-utilities"]
exclude = [
    "ext/CascLib/listfile/*",
    "ext/CascLib/debian/*",
    "ext/CascLib/.vscode/*",
    "ext/CascLib/*.sln",
    "ext/CascLib/*.vcxproj*",
    "ext/CascLib/*.vcproj",
    "ext/CascLib/*.bat",
]

[[bin]]
name = "casc"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.5.2"
globset = "0.4"

[dev-dependencies]
mockall = "0.13"

[build-dependencies]
cmake = "0.1"
bindgen = "0.71"

[profile.release]
opt-level = 's'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
