[package]
name = "casc"
version = "0.1.1"
edition = "2024"
description = "A cross-platform CLI tool for Blizzard CASC archives."
license = "MIT"
repository = "https://github.com/ironsp4rk/casc-cli"
keywords = ["casc", "blizzard", "archive", "diablo", "diablo2"]
categories = ["command-line-utilities"]
exclude = [
    "ext/CascLib/listfile/*",
    "ext/CascLib/debian/*",
    "ext/CascLib/.vscode/*",
    "ext/CascLib/*.sln",
    "ext/CascLib/*.vcxproj*",
    "ext/CascLib/*.vcproj",
    "ext/CascLib/*.bat",
]

[[bin]]
name = "casc"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
ctrlc = "3.5"
globset = "0.4"

[dev-dependencies]
mockall = "0.14"

[build-dependencies]
cmake = "0.1"
bindgen = "0.72"

[profile.release]
opt-level = 's'
lto = true
codegen-units = 1
panic = 'abort'
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
